@@ -219,6 +219,12 @@ Example  : stinkify gunther\n\r\
 From anywhere on the map, the player with this skill can cause the target to become 1 level \
 stinkier than they were before.  
 
+INJURE=<ABILITY>\
+Usage    : INJURE [PLAYER NAME] [body part]\n\r\
+Example  : injure gunther left hand\n\r\
+From anywhere on the map, the player with this skill can cause the target to have one of their \
+body parts instantly injured by 20%.
+
 METACRAFT=<ABILITY>\
 Usage    : METACRAFT (EVERY) [ITEM NAME] ([MATERIAL NAME]) (TO SELF/HERE/FILE [FILENAME])\n\r\
 Example  : metacraft wagon oak\n\r\
