@@ -2348,3 +2348,4 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
    Spying Stone, Hear Thoughts, Know Fate, Divining Eye, Spotters Orders, Find Directions, Death Warning
 11.Players can now use COMMANDS CLEAR to clear out their personal command queue.
 12.Siplet should be back to 100%, or as close as the new tech will allow.
+13.New Archon skill: Injure -- for creating instant injuries (useful for testing, or a nasty punishment).
